RM#103168 Use Java and Jackson API for GoogleMap API request